@@ -19,7 +19,7 @@ And suggestions that probably won't be done:
 - Get rid of the main menu window, moving all actions there to the tutor window. (no reason to change the "game" style of the application)
 - Add some kind of lessons for the numeric pad. (the user may create custom lessons for this)
 - Support for AltGr symbols. (also here, the user may create custom lessons)
-- Use sound system instead of the PC beeps. (in Gnome, for example, one can configure the beeps as smooth sounds)
+- Use sound system for PC beeps. (portability issues)
 - Disable Alt-keys as shortcuts, because some systems use Alt-keys to type characters. (disabling this should be done by GTK global configuration, search for GtkSettings and gtk-enable-mnemonics)
 - Separate error and touch-speed analises by language, and put in other module, apart from the adaptability. (these analyses had been separated according to the keyboard, so the user should apply the rigth keyboard for each different language)
 - Fix timeout handling of cursor blinking. (indeed, that's a feature, in fluidness module, if the user speed is good, why to care about the cursor?)
